--- a/app/templates/partials/footer.hbs
+++ b/app/templates/partials/footer.hbs
@@ -1,3 +1,7 @@
         <!-- build:js assets/scripts/main.js -->
-        <script src="assets/scripts/main.js"></script>
+        <script src="assets/bower_components/jquery/jquery.js"></script>
+        <script src="assets/scripts/alerts.js"></script>
+        <script src="assets/scripts/overlays.js"></script>
+        <script src="assets/scripts/tabs.js"></script>
+        <script src="assets/scripts/app.js"></script>
         <!-- endbuild -->
