Add if dev option, add page creation

--- a/app/templates/partials/footer.hbs
+++ b/app/templates/partials/footer.hbs
@@ -8,3 +8,5 @@
         <script src="assets/scripts/modal.js"></script>
         <script src="assets/scripts/main.js"></script>
         <!-- endbuild -->
+
+        {{#if_eq config.dev compare='true'}}<script src="assets/scripts/dev.js"></script>{{/if_eq}}
