Match anywhere not just in assets folder

--- a/app/templates/pages/index.hbs
+++ b/app/templates/pages/index.hbs
@@ -59,3 +59,7 @@ title: Home
 <h5>Image for imagemin test</h5>
 
 <img src="assets/img/cat.jpg" alt="cat" width="640" height="480">
+
+<h5>Test if new regex picks up stray assets</h5>
+
+<img src="cat2_the_things_ive_seen.jpg" alt="cat" width="640" height="480">
