--- a/app/templates/partials/footer.hbs
+++ b/app/templates/partials/footer.hbs
@@ -1,12 +1,14 @@
-        <p>Footer Placeholder note scripts are also loaded in this file</p>
-
         <!-- build:js(app) assets/scripts/main.js -->
         <script src="assets/bower_components/jquery/jquery.js"></script>
+        <script src="assets/scripts/jquery.touch.js"></script>
         <script src="assets/scripts/fastclick.js"></script>
         <script src="assets/scripts/polyfills.js"></script>
         <script src="assets/scripts/refs.js"></script>
         <script src="assets/scripts/modal.js"></script>
         <script src="assets/scripts/main.js"></script>
         <!-- endbuild -->
+
+        {{!-- Page Specific JS if needed --}}
+        {{#if jsname}}<script src="assets/scripts/pages/{{jsname}}.js"></script>{{/if}}
 
         {{#if_eq config.dev compare='true'}}<script src="assets/scripts/dev.js"></script>{{/if_eq}}
