--- a/app/templates/partials/footer.hbs
+++ b/app/templates/partials/footer.hbs
@@ -1,5 +1,5 @@
 	<!-- build:js(app) assets/scripts/main.js -->
-	<script src="assets/bower_components/jquery/jquery.js"></script>
+	<script src="assets/scripts/jquery-2.0.3.min.js"></script>
 	<script src="assets/scripts/jquery.touch.js"></script>
 	<script src="assets/scripts/fastclick.js"></script>
 	<script src="assets/scripts/polyfills.js"></script>
