--- a/app/assets/styles/main.styl
+++ b/app/assets/styles/main.styl
@@ -1,8 +1,8 @@
-red = #f26c4f;
+$red: #f26c4f;
 
 body {
 	background: #EBEBEB;
 }
 
-@import "imports/_modal.styl";
-@import "imports/_ref.styl";
+@import "imports/modal";
+@import "imports/ref";
