--- a/app/templates/layouts/layout.hbs
+++ b/app/templates/layouts/layout.hbs
@@ -5,7 +5,10 @@
 				<meta http-equiv="X-UA-Compatible" content="IE=edge">
 				<title>{{title}}</title>
 				<meta name="description" content="">
-				<meta name="viewport" content="width=device-width">
+				<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+				<meta name="apple-mobile-web-app-capable" content="yes">
+				<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+				<meta name="format-detection" content="telephone=no">
 				<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 				<!-- build:css(.tmp) assets/styles/main.css -->
 				<link rel="stylesheet" href="assets/styles/main.css">
