Fix remove task
Account for ../ or ../../ links

--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -6,3 +6,10 @@ body {
 
 @import "imports/modal";
 @import "imports/ref";
+
+/*Delete me*/
+.cat2 {
+    background: url('../../cat2_the_things_ive_seen.jpg');
+    width: 640px;
+    height: 480px;
+}
