--- a/app/templates/pages/index.hbs
+++ b/app/templates/pages/index.hbs
@@ -62,4 +62,4 @@ title: Home
 
 <h5>Test if new regex picks up stray assets</h5>
 
-<img src="cat2_the_things_ive_seen.jpg" alt="cat" width="640" height="480">
+<div class="cat2"></div>
