--- a/app/templates/layouts/layout.hbs
+++ b/app/templates/layouts/layout.hbs
@@ -10,10 +10,10 @@
 				<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 				<meta name="format-detection" content="telephone=no">
 				<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-				<!-- build:css(.tmp) assets/styles/main.css -->
-				<link rel="stylesheet" href="assets/styles/main.css">
+				<!-- build:css(.tmp) assets/css/main.css -->
+				<link rel="stylesheet" href="assets/css/main.css">
 				<!-- endbuild -->
-				{{#if cssname}}<link rel="stylesheet" href="assets/styles/pages/{{cssname}}.css">{{/if}}
+				{{#if cssname}}<link rel="stylesheet" href="assets/css/pages/{{cssname}}.css">{{/if}}
 		</head>
 		<body id="{{cssname}}">
 				<!-- Include a nav from partials -->
