--- a/app/templates/partials/footer.hbs
+++ b/app/templates/partials/footer.hbs
@@ -1,8 +1,8 @@
 	<!-- build:js(app) assets/js/main.js -->
-	<script src="assets/js/jquery-2.0.3.min.js"></script>
-	<script src="assets/js/jquery.touch.js"></script>
-	<script src="assets/js/fastclick.js"></script>
-	<script src="assets/js/polyfills.js"></script>
+	<script src="assets/js/vendor/jquery-2.0.3.min.js"></script>
+	<script src="assets/js/vendor/jquery.touch.js"></script>
+	<script src="assets/js/vendor/fastclick.js"></script>
+	<script src="assets/js/vendor/polyfills.js"></script>
 	<script src="assets/js/refs.js"></script>
 	<script src="assets/js/modal.js"></script>
 	<script src="assets/js/main.js"></script>
@@ -12,6 +12,6 @@
 	{{#if jsname}}<script src="assets/js/pages/{{jsname}}.js"></script>{{/if}}
 
 	{{!-- Pull flexslider in if flag is set --}}
-	{{#if flexslider}}<script src="assets/js/flexslider.js"></script>{{/if}}
+	{{#if flexslider}}<script src="assets/js/vendor/flexslider.js"></script>{{/if}}
 
-	{{#if_eq config.dev compare='true'}}<script src="assets/js/dev.js"></script>{{/if_eq}}
+	{{#if_eq config.dev compare='true'}}<script src="assets/js/libs/dev.js"></script>{{/if_eq}}
