File names can't overlap in usemin 2.0

--- a/app/templates/layouts/layout.hbs
+++ b/app/templates/layouts/layout.hbs
@@ -28,7 +28,7 @@
 		{{!-- Ref placeholder --}}
 	</div>
 
-	<!-- build:js assets/js/main.js -->
+	<!-- build:js(app) assets/js/main.min.js -->
 	<script src="assets/js/vendor/jquery-2.0.3.min.js"></script>
 	<script src="assets/js/vendor/jquery.touch.js"></script>
 	<script src="assets/js/vendor/fastclick.js"></script>
