Better ref handling

--- a/app/assets/css/imports/_ref.scss
+++ b/app/assets/css/imports/_ref.scss
@@ -1,5 +1,8 @@
-#Reference {
+#References {
 	display: none;
+	max-height: 80%;
+	overflow: auto;
+	-webkit-overflow-scrolling: touch;
 }
 
 sup[data-refs] {
