--- a/app/templates/pages/index.hbs
+++ b/app/templates/pages/index.hbs
@@ -7,12 +7,14 @@ title: Home
 <h3>Reference popups</h3>
 
 <h5>Code Example</h5>
-<code><pre>&lt;sup data-refs=&quot;1&quot;&gt;1&lt;/sup&gt;<br/><br/>&lt;sup data-refs=&quot;1-2-4&quot;&gt;2-4&lt;/sup&gt;</pre></code>
+<code><pre>&lt;sup data-refs&gt;1&lt;/sup&gt;<br/><br/>&lt;sup data-refs&gt;2-4&lt;/sup&gt;<br><br>&lt;sup data-refs&gt;1,2,3-7,11-20&lt;/sup&gt;</pre></code>
 
 <h5>HTML Example</h5>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<sup data-refs="1">1</sup></p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<sup data-refs>1,2</sup></p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam, distinctio ratione optio!<sup data-refs="2-3-4">2-4</sup></p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. ratione optio!<sup data-refs>2-4</sup></p>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam, distinctio ratione optio!<sup data-refs>1,2,3-7,11-20</sup></p>
 
 <h3>Modal popups</h3>
 
